--- a/sport/style.css
+++ b/sport/style.css
@@ -26,7 +26,7 @@ header {
 header{
     overflow: hidden;
     font-size: 2rem;
-    background-color: rgb(251, 250, 249);
+    background-color: #32CD32;
     color: black;
     width: 100%;
     display: flex;
@@ -74,6 +74,14 @@ header{
     color: #fff;
     background-color: rgb(0, 0, 0);
  }
+
+.sport {
+    transition: 0.7s ease-out;
+    color: #fff;
+    background-color: rgb(0, 0, 0);
+}
+
+
 body {
     margin: 0;
     background-color: rgb(251, 250, 249);
@@ -102,8 +110,9 @@ body a {
    /* border:1rem solid rgb(225, 255, 0) ;*/
 }
 .halfContainer img {
-    height: 10rem;
-    width: 33%;
+    margin-left: 1.3rem;
+    height: 13rem;
+    width: 40%;
     object-fit: fill;
     align-items: center;
 }
@@ -111,9 +120,12 @@ body a {
     height: 20rem;
    /* border:1rem solid rgb(255, 0, 174) ;*/
 }
+
+
+
 .tweeContainerGroot img {
-    height: 10rem;
-    width: 33%;
+    height: 20rem;
+    width: 100%;
     object-fit: fill;
     align-items: center;
 }
