--- a/sport/cristiano/style.css
+++ b/sport/cristiano/style.css
@@ -129,6 +129,8 @@ body a {
         margin-left: auto;
         margin-right: auto;
         width: 40%;
+        margin-top: 3rem;
+        margin-bottom: 3rem;
 }
 
 
