--- a/sport/transfer/style.css
+++ b/sport/transfer/style.css
@@ -84,30 +84,69 @@ header{
 
 body {
     margin: 0;
-    background-color: rgb(251, 250, 249);
+    background-color: #faf8f7;
     font-size: 1.6rem;
 }
 body a {
     text-decoration: none;
     color: black
 }
+
+.centreer {
+    text-align: center;
+    font-size: 3rem;
+}
+
+
+.div1-3 {
+    width: 25%;
+    float: left;
+    text-align: center;
+    
+  }
+
+  /* Style the middle div */
+.div2 {
+    width: 50%;
+    float: left;
+    text-align:left;
+    background-color: white;
+  }
+
+
+
+
+  @media only screen and (max-width: 600px) {
+    div {
+      width: 100%;
+      float: none;
+    }
+  }
+
+
+.image{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+        margin-top: 3rem;
+        margin-bottom: 3rem;
+}
+
+
+
 footer {
-    position: sticky;
-    bottom: 0;
-    width: 100%;
-    height: 60px;   /* Height of the footer */
-    background: black;
-    color: white;
-  }
-  footer p {
-    display: inline-block;
-    color: #fff;
-    margin-left: 35%;
-    margin-right: 35%;
-  }
-  
-  footer a{
-     margin: 10px ;
-     display: inline-block;
- }
+    position: absolute;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+}
+
+
+
+
+
+
+
+
  
