--- a/sport/style.css
+++ b/sport/style.css
@@ -143,24 +143,36 @@ body a {
     width: 66%;
     flex-direction:row ;
    /* border: 1rem solid rgb(216, 134, 18); */
-}
-footer {
-    position: sticky;
+}footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
     bottom: 0;
     width: 100%;
-    height: 60px;   /* Height of the footer */
-    background: black;
-    color: white;
+    background-color: #32CD32;
+    color: white;
+    text-align: center;
+  position: sticky;
   }
-  footer p {
-    display: inline-block;
+
+  .resize {display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2rem;
+    width: 7.5rem;
+    height: auto;
+}
+  
+  footer a {
     color: #fff;
-    margin-left: 35%;
-    margin-right: 35%;
+    text-decoration: none;
+    margin: 0 10px;
   }
   
-  footer a{
-     margin: 10px ;
-     display: inline-block;
- }
- 
+  @media (max-width: 600px) {
+    footer {
+      flex-direction: column;
+    }
+  }
+  
